# learnbgfx

./: .gitignore  CMakeLists.txt  README.md  emscripten.toolchain.cmake
include/common/: camera.h  macos_scale.h  setup_metal_layer.h  utils.h
include/imgui/: imgui_impl.h
shaders/: varying.def.sc
src/: CMakeLists.txt
src/1.getting_started/: CMakeLists.txt
src/1.getting_started/1.1.hello_sdl_window/: CMakeLists.txt  hello_sdl_window.c
src/1.getting_started/1.2.hello_sdl_window_bgfx_clear/: CMakeLists.txt  hello_sdl_window_bgfx_clear.c
src/1.getting_started/1.3.triangle/: CMakeLists.txt  fs_triangle.sc  quad.c  quad_proper.c  triangle.c  triangle_indexed.c  varying.def.sc  vs_triangle.sc
src/1.getting_started/1.4.shaders_uniforms/: CMakeLists.txt  shaders_uniform.c
src/1.getting_started/1.5.shaders_struct/: CMakeLists.txt  fs_struct.sc  shaders_struct.c  vs_struct.sc
src/1.getting_started/1.6.textures/: CMakeLists.txt  fs_textures.sc  fs_textures_exercise_1.sc  fs_textures_exercise_4.sc  textures.c  textures_combined.c  textures_exercise_1.c  textures_exercise_4.c  varying.def.sc  vs_textures.sc
src/1.getting_started/1.7.transformations/: CMakeLists.txt  fs_transformations.sc  transformations.c  transformations_exercise_1.c  transformations_exercise_2.c  vs_transformations.sc
src/1.getting_started/1.8.coordinate_systems/: CMakeLists.txt  coordinate_system_cube.c  coordinate_system_even_more_cubes.c  coordinate_system_plane.c
src/1.getting_started/1.9.camera/: CMakeLists.txt  camera_keyboard_mouse_move.c  camera_keyboard_move.c  camera_lookat.c  camera_struct.c  fs_camera_lookat.sc
src/2.lighting/: CMakeLists.txt
src/2.lighting/2.1.colors/: CMakeLists.txt  colors.c  fs_light_cube.sc  vs_light_cube.sc
src/2.lighting/2.2.ambient/: CMakeLists.txt  ambient.c  fs_ambient_light.sc
src/2.lighting/2.2.ambient/2.1.colors/: CMakeLists.txt  ambient.c  colors.c  diffuse.c  fs_ambient.sc  fs_diffuse.sc  specular.c
src/2.lighting/2.3.diffuse/: CMakeLists.txt  diffuse.c  fs_diffuse.sc  fs_diffuse_light.sc  vs_diffuse.sc
src/2.lighting/2.4.specular/: CMakeLists.txt  fs_specular.sc  specular.c  varying.def.specular.sc  vs_specular_light.sc
src/2.lighting/2.5.materials/: CMakeLists.txt  fs_materials.sc  materials.c  vs_materials.sc
src/bonus/1.imgui/: CMakeLists.txt  fs_imgui_specular.sc  imgui_example.c
src/common/: camera.c  common.sh  macos_scale.m  setup_metal_layer.mm  utils.c
src/common/imgui/: imgui_impl.c
