add_subdirectory(1.1.hello_sdl_window)
add_subdirectory(1.2.hello_sdl_window_bgfx_clear)
add_subdirectory(1.3.triangle)
add_subdirectory(1.4.shaders_uniforms)
add_subdirectory(1.5.shaders_struct)
add_subdirectory(1.6.textures)
add_subdirectory(1.7.transformations)
add_subdirectory(1.8.coordinate_systems)
add_subdirectory(1.9.camera)